# ibus-fep

./: Makefile.am  README  autogen.sh  configure.ac
m4/: Makefile.am
po/: POTFILES.in  POTFILES.skip  ja.po
src/: Makefile.am  client.vala  fep.vala  fep.wrapper.in  ibus-1.0.vapi  ibus-fep.1  ibus-fep.in  main.vala
